[workspace]
resolver = "2"
members = [
  "crates/sarusctl",
  "crates/skybox",
  "crates/podman-driver",
  "crates/raster",
]

[patch."https://github.com/sarus-suite/podman-driver"]
sarus-suite-podman-driver = { path = "crates/podman-driver" }

[patch."https://github.com/sarus-suite/raster"]
raster = { path = "crates/raster" }
